# C-SDL-Template

./: CMakeLists.txt  README.md  vcpkg.json
src/: main.c
